# tau

./: README.md  mkdocs.yml  pyproject.toml
dev-notes/: README.md  install-scripts.md  startup-thinking-level-fallback.md  tui-session-modal-selection-copy.md
dev-notes/architecture/: phase-23-tui-polish.md  structured-assistant-content.md  tui-terminal-tab-title.md
docs/: 04-sessions.md  configuration.md  custom-tui.md  index.md  providers.md
docs/architecture/: index.md  phase-12-textual-tui.md  phase-15-slash-command-registry.md  phase-18-provider-config-foundation.md  phase-19-context-discovery.md  phase-20-1-context-accounting.md  phase-20-2-thinking-controls.md  phase-23-tui-polish.md  phase-24-session-tree-branching.md  phase-7-session-tree.md
docs/assets/: landing.css  landing.js
release-notes/: releases.json
src/tau_agent/: __init__.py  events.py  harness.py
src/tau_agent/session/: __init__.py  entries.py  jsonl.py  memory.py  storage.py  tree.py
src/tau_ai/: __init__.py  anthropic.py  env.py  google.py  mistral.py  openai_codex.py  openai_compatible.py  stream.py
src/tau_coding/: __init__.py  cli.py  commands.py  context_window.py  prompt_templates.py  provider_catalog.py  provider_config.py  session.py  session_export.py  session_manager.py  skills.py
src/tau_coding/data/: catalog.toml
src/tau_coding/data/release-notes/: releases.json
src/tau_coding/tui/: __init__.py  adapter.py  app.py  autocomplete.py  config.py  state.py  terminal_title.py  widgets.py
tests/: test_agent_harness.py  test_agent_loop.py  test_agent_types.py  test_cli.py  test_coding_session.py  test_commands.py  test_context_window.py  test_prompt_templates.py  test_provider_config.py  test_provider_runtime.py  test_session.py  test_session_manager.py  test_skills.py  test_tau_ai.py  test_terminal_title.py  test_tui_adapter.py  test_tui_app.py  test_tui_autocomplete.py  test_tui_config.py
website/content/: quickstart.md
website/content/guides/: context.md  tui.md
website/content/internals/: agent-loop.md
website/content/reference/: configuration.md
website/layouts/: index.html
website/static/: install.ps1  install.sh  landing.js
