[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "tau-ai"
version = "0.1.3"
description = "A Python implementation of a minimalist Pi-style coding-agent harness."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.0",
    "httpx>=0.27",
    "packaging>=24.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "textual>=1.0",
    "typer>=0.12",
]

[project.urls]
Homepage = "https://twotimespi.dev"
Documentation = "https://twotimespi.dev"
Repository = "https://github.com/alejandro-ao/tau"
Issues = "https://github.com/alejandro-ao/tau/issues"

[project.scripts]
tau = "tau_coding.cli:app"

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tau_ai", "src/tau_agent", "src/tau_coding"]
artifacts = ["release-notes/releases.json"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["tau_ai", "tau_agent", "tau_coding"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
